--- a/css/index.css
+++ b/css/index.css
@@ -43,8 +43,18 @@ body{
     border-bottom: 1px solid #ddd;
     padding: 10px;
 }
-/* 
-[data-toggle="tooltip"] {
-    color: red;
-    background-color: white;
-} */
+
+.carousel {
+    background:black;
+}
+
+.carousel-item {
+  height: 300px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
